# spotify-player

./: Cargo.toml
.github/workflows/: build.yml
src/: main.rs  rest_controllers.rs  spotify.rs
